# python-pytest-cases

./: .gitignore  .travis.yml  .zenodo.json  404.html  LICENSE  README.md  api_reference.html  changelog.html  examples.html  index.html  long_description.html  mkdocs.yml  noxfile-requirements.txt  noxfile.py  paper.bib  paper.json  paper.md  pyproject.toml  pytest_goodies.html  setup.cfg  setup.py  sitemap.xml  unions_theory.html
.github/workflows/: base.yml  ghpages.yml  updater.yml
api_reference/: index.html
changelog/: index.html
ci_tools/: .gitignore  .pylintrc  Readme-travis.md  check_python_version.py  flake8-requirements.txt  generate-junit-badge.py  generate-junit-html.xml  github_release.py  github_travis_rsa.enc  headers.tmpl  headers_check.py  nox_utils.py  py_install.py  requirements-conda.txt  requirements-doc.txt  requirements-pip.txt  requirements-report.txt  requirements-setup.txt  requirements-test.txt  run_tests.sh
docs/: api_reference.md  changelog.md  examples.md  index.md  long_description.md  mkdocs.yml  pytest_goodies.md  unions_theory.md  usage.md
docs/imgs/: source.pptx
docs/usage/: advanced.md  basics.md  intermediate.md
examples/: index.html
junit/: all-tests.html  allclasses-frame.html  alltests-errors.html  alltests-fails.html  alltests-skipped.html  junit.xml  overview-frame.html  overview-summary.html  report.html
long_description/: index.html
pytest_cases/: __init__.py  case_funcs.py  case_funcs_legacy.py  case_funcs_new.py  case_info.py  case_parametrizer.py  case_parametrizer_legacy.py  case_parametrizer_new.py  common.py  common_mini_six.py  common_others.py  common_pytest.py  common_pytest_lazy_values.py  common_pytest_marks.py  decorator_hack.py  filters.py  fixture__creation.py  fixture_core1_unions.py  fixture_core2.py  fixture_parametrize_plus.py  main.py  main_fixtures.py  main_params.py  plugin.py  steps.py
pytest_cases/tests/: conftest.py  example_code.py  test_filtering.py  test_generators.py  test_main.py  test_main_data.py  test_memoize.py  test_parameters.py  test_parametrized_blend.py  test_plugin_installed.py  test_same_file.py  test_select_hardcoded.py  test_shared.py  test_shared_cases.py  test_suite1.py  test_suite2.py  test_two_modules.py  utils.py
pytest_cases/tests/advanced/: test_memoize.py  test_memoize_generators.py  test_parameters.py  test_stackoverflow.py  test_suite_parametrized_cases.py  test_suite_shared_dict_cases.py
pytest_cases/tests/fixtures/: test_fixture_in_parametrize.py  test_fixture_in_parametrize_basic.py  test_fixture_in_parametrize_tuple.py  test_fixture_ref_basic2.py  test_fixture_ref_basic3_tuples.py  test_fixture_ref_custom2.py  test_fixture_ref_custom3.py  test_fixture_union_custom_mark.py  test_fixture_union_ids.py  test_fixture_unpacking2.py  (+11 more)
pytest_goodies/: index.html
reports/coverage/: class_index.html  coverage.xml  d_43222b468011bcff___init___py.html  d_43222b468011bcff__version_py.html  d_43222b468011bcff_case_funcs_py.html  d_43222b468011bcff_case_parametrizer_new_py.html  d_43222b468011bcff_common_mini_six_py.html  d_43222b468011bcff_common_others_py.html  d_43222b468011bcff_common_pytest_lazy_values_py.html  d_43222b468011bcff_common_pytest_marks_py.html  d_43222b468011bcff_common_pytest_py.html  d_43222b468011bcff_filters_py.html  d_43222b468011bcff_fixture__creation_py.html  d_43222b468011bcff_fixture_core1_unions_py.html  d_43222b468011bcff_fixture_core2_py.html  d_43222b468011bcff_fixture_parametrize_plus_py.html  d_43222b468011bcff_plugin_py.html  d_e0f0fa8c1f5d62a2___init___py.html  d_e0f0fa8c1f5d62a2__version_py.html  d_e0f0fa8c1f5d62a2_case_funcs_py.html  d_e0f0fa8c1f5d62a2_case_parametrizer_new_py.html  d_e0f0fa8c1f5d62a2_common_mini_six_py.html  d_e0f0fa8c1f5d62a2_common_others_py.html  d_e0f0fa8c1f5d62a2_common_pytest_lazy_values_py.html  d_e0f0fa8c1f5d62a2_common_pytest_marks_py.html  d_e0f0fa8c1f5d62a2_common_pytest_py.html  d_e0f0fa8c1f5d62a2_filters_py.html  d_e0f0fa8c1f5d62a2_fixture__creation_py.html  d_e0f0fa8c1f5d62a2_fixture_core1_unions_py.html  d_e0f0fa8c1f5d62a2_fixture_core2_py.html  d_e0f0fa8c1f5d62a2_fixture_parametrize_plus_py.html  d_e0f0fa8c1f5d62a2_pep380_py.html  d_e0f0fa8c1f5d62a2_pep492_py.html  d_e0f0fa8c1f5d62a2_pep525_py.html  d_e0f0fa8c1f5d62a2_plugin_py.html  function_index.html  index.html  pytest_cases___init___py.html  pytest_cases__version_py.html  pytest_cases_case_funcs_legacy_py.html  (+33 more)
reports/flake8/: index.html  pytest_cases.case_funcs.report.html  pytest_cases.case_funcs.source.html  pytest_cases.case_parametrizer_new.report.html  pytest_cases.case_parametrizer_new.source.html  pytest_cases.common_others.report.html  pytest_cases.common_others.source.html  pytest_cases.common_pytest.report.html  pytest_cases.common_pytest.source.html  pytest_cases.common_pytest_marks.report.html  pytest_cases.common_pytest_marks.source.html  pytest_cases.fixture_core1_unions.report.html  pytest_cases.fixture_core1_unions.source.html  pytest_cases.fixture_core2.report.html  pytest_cases.fixture_core2.source.html  pytest_cases.fixture_parametrize_plus.report.html  pytest_cases.fixture_parametrize_plus.source.html  pytest_cases.pep380.report.html  pytest_cases.pep380.source.html  pytest_cases.pep492.report.html  pytest_cases.pep492.source.html  pytest_cases.pep525.report.html  pytest_cases.pep525.source.html  pytest_cases.plugin.report.html  pytest_cases.plugin.source.html  styles.css
reports/junit/: junit.xml  report.html
search/: search_index.json
src/pytest_cases/: __init__.py  case_funcs.py  case_parametrizer_new.py  common_mini_six.py  common_others.py  common_pytest.py  common_pytest_lazy_values.py  common_pytest_marks.py  filters.py  fixture__creation.py  fixture_core1_unions.py  fixture_core2.py  fixture_core_pep380.py  fixture_core_pep492.py  fixture_core_pep525.py  fixture_parametrize_plus.py  pep380.py  pep492.py  pep525.py  plugin.py
tests/: conftest.py  test_common_pytest.py  test_plugin_installed.py  utils.py
unions_theory/: index.html
usage/: index.html
usage/advanced/: index.html
usage/basics/: index.html
(+343 files in other folders)
