[build-system]
requires = [
    "distutils",  # see https://github.com/pypa/setuptools/issues/3661
    "setuptools>=39.2",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

# pip: no ! does not work in old python 2.7 and not recommended here
# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html#basic-use
