[build-system]
requires = [
    "setuptools>=39.2,<82",  # setuptools v82 does not have pkg_resources anymore https://github.com/pypa/setuptools/issues/5174
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

# pip: no ! does not work in old python 2.7 and not recommended here
# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html#basic-use
