[egg_info]
#tag_date = 1 already covered by setuptools_scm
#tag_build = .dev --this adds ".dev" at the end of the release name. we already use setuptools_scm so already covered.
#tag_svn_revision = 1  --this adds "_r0" at the end of the release name. we already use setuptools_scm so already covered.

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
description-file = README.md

# In order to be able to execute 'python setup.py test'
# from https://docs.pytest.org/en/latest/goodpractices.html#integrating-with-setuptools-python-setup-py-test-pytest-runner
[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --doctest-modules
testpaths = pytest_cases/tests/
