# See https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# And this great example : https://github.com/Kinto/kinto/blob/master/setup.cfg
[metadata]
name = pytest-cases
description = Separate test code from test cases in pytest.
description_file = README.md
license = BSD 3-Clause
long_description = file: docs/long_description.md
long_description_content_type=text/markdown
keywords = pytest test case testcase test-case decorator parametrize parameter data dataset file separate concerns lazy fixture union
author = Sylvain MARIE <sylvain.marie@se.com>
maintainer = Sylvain MARIE <sylvain.marie@se.com>
url = https://github.com/smarie/python-pytest-cases
# download_url = https://github.com/smarie/python-pytest-cases/tarball/master >> do it in the setup.py to get the right version
classifiers =
    # See https://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Pytest

[options]
# one day these will be able to come from requirement files, see https://github.com/pypa/setuptools/issues/1951. But will it be better ?
setup_requires =
    setuptools_scm
    pytest-runner
install_requires =
    decopatch
    makefun>=1.9.5
    # note: pytest, too :)
    functools32;python_version<'3.2'
    # note: do not use double quotes in these, this triggers a weird bug in PyCharm in debug mode only
    funcsigs;python_version<'3.3'
tests_require =
    six
    pytest
    pytest-steps
    pytest-harvest
    pytest-asyncio
    # for some reason these pytest dependencies were not declared in old versions of pytest
    # six;python_version<'3.6'
    atomicwrites;python_version<'3.5'
    attr;python_version<'3.6'
    pluggy;python_version<'3.6'

# test_suite = tests --> no need apparently
#
zip_safe = False
# explicitly setting zip_safe=False to avoid downloading `ply` see https://github.com/smarie/python-getversion/pull/5
# and makes mypy happy see https://mypy.readthedocs.io/en/latest/installed_packages.html
package_dir=
    =src
packages = find:
# see [options.packages.find] below
# IMPORTANT: DO NOT set the `include_package_data` flag !! It triggers inclusion of all git-versioned files
# see https://github.com/pypa/setuptools_scm/issues/190#issuecomment-351181286
# include_package_data = True
[options.packages.find]
where=src
exclude =
    contrib
    docs
    *tests*

[options.package_data]
* = py.typed, *.pyi


# Optional dependencies that can be installed with e.g.  $ pip install -e .[dev,test]
# [options.extras_require]

# -------------- Packaging -----------
[options.entry_points]
pytest11 =
    cases = pytest_cases.plugin

# [egg_info] >> already covered by setuptools_scm

[bdist_wheel]
# Code is written to work on both Python 2 and Python 3.
universal=1

# ------------- Others -------------
# In order to be able to execute 'python setup.py test'
# from https://docs.pytest.org/en/latest/goodpractices.html#integrating-with-setuptools-python-setup-py-test-pytest-runner
[aliases]
test = pytest

# pytest default configuration
[tool:pytest]
testpaths = tests/
markers =
    black: dummy mark.
    fast: dummy mark.
    slow: dummy mark.
    foo: dummy mark.
    bar: dummy mark.
addopts =
    --verbose
    --doctest-modules
#    --ignore-glob='**/_*.py'  not supported in old pytest versions!

# we need the 'always' for python 2 tests to work see https://github.com/pytest-dev/pytest/issues/2917
filterwarnings =
    always
;    ignore::UserWarning

# Coverage config
[coverage:run]
branch = True
omit = *tests*
# this is done in nox.py (github actions)
# source = src/pytest_cases
# command_line = -m pytest --junitxml="reports/pytest_reports/pytest.xml" --html="reports/pytest_reports/pytest.html" -v tests/

[coverage:report]
fail_under = 70
show_missing = True
exclude_lines =
    # this line for all the python 2 not covered lines
    except ImportError:
    # we have to repeat this when exclude_lines is set
    pragma: no cover

# Done in nox.py
# [coverage:html]
# directory = site/reports/coverage_reports
# [coverage:xml]
# output = site/reports/coverage_reports/coverage.xml

[flake8]
max-line-length = 120
extend-ignore = D, E203  # D: Docstring errors, E203: see https://github.com/PyCQA/pycodestyle/issues/373
copyright-check = True
copyright-regexp = ^\#\s+Authors:\s+Sylvain MARIE <sylvain\.marie@se\.com>\n\#\s+\+\sAll\scontributors\sto\s<https://github\.com/smarie/python\-pytest\-cases>\n\#\n\#\s+License:\s3\-clause\sBSD,\s<https://github\.com/smarie/python\-pytest\-cases/blob/master/LICENSE>
exclude =
    .git
    .github
    .nox
    .pytest_cache
    ci_tools
    docs
    tests
    noxfile.py
    setup.py
    */_version.py
